Sat Dec 09 12:21:35 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po, doc/sv/deb.5, doc/sv/deb-old.5, doc/sv/dpkg.8:
    Updated Swedish translation.
  * doc/sv/start-stop-daemon.8: Fixed a typo.

Sat Dec  9 01:51:51 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * archtable, scripts/dpkg-architecture.pl: add linux s/390
  * Makefile.conf.in, configure.in: add new option to use libz
  * dpkg-deb/Makefile.in, dpkg-deb/build.c, dpkg-deb/extract.c: use libz
    if so desired
  * debian/rules: default to using static libz
  * include/{dpkg-db.h,dpkg.h.in}, lib/mlib.c, lib/varbuf.c: generalize 
    fd copy loops
  * main/filesdb.c: udpates to use read_fd_buf

Tue Dec 05 07:43:05 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.

Mon Dec  4 14:42:01 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-statoverride.pl, main/filesdb.c: merge patch from
    Robert Luberda <robert@pingu.ii.uj.edu.pl> to fix statoverrides
    using numerical [ug]ids
  * Merge updats from the v17 branch:
    + scripts/dpkg-buildpackage.sh: Quote test options for usepause
    + scripts/dpkg-shlibdeps.pl: resolve library paths using a combination
      of the libc major version, and ldconfig -p output. Solves problems
      with errant libc5 deps.
    + scripts/dpkg-shlibdeps.pl: Make it parse soname's in the format of
      "libfoo-X.X.so" (e.g. libdb-3.1.so) and use it. Also make it give a
      warning if there is a NEEDED line in the objdump output that we cannot
      grok.
    + scripts/update-rc.d.pl: fix typo in regexp for scripts
    + debian/rules: remove final occurance of emacs

Mon Dec  4 01:34:57 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * Merge more of Adams handywork to bring dpkg up to speed (literally :)
    + include/dpkg.h.in: remove defines for cat and dpkg-safelist since they
      are no longer used
    + lib/mlib.c: split up do_fd_copy
    + lib/varbuf.c: add varbufvprintf