@@ -1,3 +1,9 @@
+Sun Dec 10 00:10:27 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/mlib.c: remove no longer used struct
+  * lib/mlib.c: return number of bytes read in do_fd_read
+  * main/enquiry.c: one more place where we cah use read_fd_vbuf
+
 Sat Dec 09 12:21:35 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po, doc/sv/deb.5, doc/sv/deb-old.5, doc/sv/dpkg.8:
